--- a/Pair Project Food/package.json
+++ b/Pair Project Food/package.json
@@ -13,6 +13,8 @@
     "bcryptjs": "^2.4.3",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
+    "nodemailer": "^6.9.14",
     "pg": "^8.12.0",
     "sequelize": "^6.37.3"
   },
